<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:paddingBottom="16dp"
        tools:context=".view.addstory.AddStoryActivity">

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/photo_place_holder"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_place_holder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginEnd="8dp"
            android:text="@string/camera"
            app:layout_constraintBottom_toTopOf="@+id/descInputLayout"
            app:layout_constraintEnd_toStartOf="@id/galleryButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:text="@string/gallery"
            app:layout_constraintBottom_toBottomOf="@+id/cameraButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cameraButton"
            app:layout_constraintTop_toTopOf="@+id/cameraButton" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/checkBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cameraButton">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDescription"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="start"
                android:hint="@string/description" />
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descInputLayout" />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:text="@string/upload"
            android:translationZ="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/uploadButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/previewImageView"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>